set options on driver with OPTIONS env var

--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
             "value": ""
         },
         {
-            "name": "VOLUME",
+            "name": "VOLUME_NAME",
             "settable": [
                 "value"
             ],
