--- a/config.json
+++ b/config.json
@@ -19,6 +19,13 @@
                 "value"
             ],
             "value": ""
+        },
+        {
+            "name": "OPTIONS",
+            "settable": [
+                "value"
+            ],
+            "value": ""
         }
     ],
     "network": {
