declare LOGLEVEL driver variable

--- a/config.json
+++ b/config.json
@@ -26,6 +26,13 @@
                 "value"
             ],
             "value": ""
+        },
+        {
+            "name": "LOGLEVEL",
+            "settable": [
+                "value"
+            ],
+            "value": ""
         }
     ],
     "network": {
