plugin enable fails when using "gluster-block-file.sock" but not with "glusterblockfile.sock"

--- a/gluster-block-file-plugin/config.json
+++ b/gluster-block-file-plugin/config.json
@@ -43,7 +43,7 @@
         "types": [
             "docker.volumedriver/1.0"
         ],
-        "socket": "gluster-block-file.sock"
+        "socket": "glusterblockfile.sock"
     },
     "linux": {
         "capabilities": [
