allow block file plugin to mount all /dev to be able to use loop mounts

--- a/gluster-block-file-plugin/config.json
+++ b/gluster-block-file-plugin/config.json
@@ -38,6 +38,14 @@
     "network": {
         "type": "host"
     },
+    "mounts": [
+        {
+            "source": "/dev",
+            "destination": "/dev",
+            "type": "bind",
+            "options": ["rbind"]
+        }
+    ],
     "propagatedMount": "/mnt",
     "interface": {
         "types": [
@@ -49,10 +57,6 @@
         "capabilities": [
             "CAP_SYS_ADMIN"
         ],
-        "devices": [
-            {
-                "path": "/dev/fuse"
-            }
-        ]
+        "allowAllDevices": true
     }
 }
